--- a/OpenCore/0.9.5/Post Install EFI/EFI/OC/Config.plist
+++ b/OpenCore/0.9.5/Post Install EFI/EFI/OC/Config.plist
@@ -1186,7 +1186,7 @@
 				<key>bluetoothInternalControllerInfo</key>
 				<data>AAAAAAAAAAAAAAAAAAA=</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 debug=0x100 -ctrsmt agdpmod=pikera -wegnoigpu igfxonln=1 e1000=0</string>
+				<string>keepsyms=1 debug=0x100 -ctrsmt agdpmod=pikera -wegnoigpu igfxonln=1 e1000=0</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
