--- a/OpenCore/0.9.6/USB Installer EFI/EFI/OC/config.plist
+++ b/OpenCore/0.9.6/USB Installer EFI/EFI/OC/config.plist
@@ -440,15 +440,6 @@
 				<key>model</key>
 				<string>ROG SupremeFX 7.1 ALC4080</string>
 			</dict>
-			<key>PciRoot(0x0)/Pci(0x14,0x2)</key>
-			<dict>
-				<key>AAPL,slot-name</key>
-				<string>Internal@0,20,2</string>
-				<key>device_type</key>
-				<string>RAM memory</string>
-				<key>model</key>
-				<string>ROG STRIX Z790-A GAMING WIFI D4 Dual Channel Memory Architecture</string>
-			</dict>
 			<key>PciRoot(0x0)/Pci(0x1F,0x4)</key>
 			<dict>
 				<key>AAPL,slot-name</key>
@@ -456,7 +447,7 @@
 				<key>device_type</key>
 				<string>SMBus</string>
 				<key>model</key>
-				<string>ROG STRIX Z790-A GAMING WIFI D4 SMBus</string>
+				<string>Z790-A SMBus</string>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1C,0x3)/Pci(0x0,0x0)</key>
 			<dict>
@@ -465,7 +456,7 @@
 				<key>device_type</key>
 				<string>Ethernet controller</string>
 				<key>model</key>
-				<string>Intel(R) Ethernet Controller I225-V / Intel(R) Ethernet Controller I226</string>
+				<string>Intel(R) Ethernet Controller I225-V</string>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1C,0x0)/Pci(0x0,0x0)</key>
 			<dict>
@@ -475,6 +466,24 @@
 				<string>Network controller</string>
 				<key>model</key>
 				<string>Intel(R) Wi-Fi 6E AX210</string>
+			</dict>
+			<key>PciRoot(0x0)/Pci(0x1,0x0)/Pci(0x0,0x0)/Pci(0x0,0x0)</key>
+			<dict>
+				<key>AAPL,slot-name</key>
+				<string>Internal@0,1,0/0,0/0,0</string>
+				<key>device_type</key>
+				<string>PCI bridge</string>
+				<key>model</key>
+				<string>Navi 10 XL Downstream Port of PCI Express Switch</string>
+			</dict>
+			<key>PciRoot(0x0)/Pci(0x14,0x0)</key>
+			<dict>
+				<key>AAPL,slot-name</key>
+				<string>Internal@0,20,0</string>
+				<key>device_type</key>
+				<string>USB controller</string>
+				<key>model</key>
+				<string>Asus ROG Strix Z790-A XHCI Host Controller</string>
 			</dict>
 		</dict>
 		<key>Delete</key>
